semi-fix for main calc overflow

--- a/stylesheets/calculator.css
+++ b/stylesheets/calculator.css
@@ -20,6 +20,8 @@ button {
 
 #display, #calculations {
     text-align: right;
+    max-width: 298px;
+    word-break:break-all;
 }
 
 td{
